# raspberry-pi-bare-metal-cube-marching

./: .gitignore  Cargo.toml  build.fish  build.rs  link.ld  run.fish
.cargo/: config
sd_card/: config.txt
src/: main.rs  start.rs
src/shapes/: mod.rs
tools/: adafruit-ft232h.cfg  load_image.cfg  raspi4.cfg  run.gdb
