[package]
name = "kernel"
version = "0.1.0"
authors = ["Olivier Lemoine <olivier@le-moine.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-list-alloc = { git = "https://github.com/OlivierLemoine/linked-list-allocator" }
hal = { git = "https://github.com/OlivierLemoine/raspberry-pi-4-hal" }
